# cesty

./: .gitignore  Cargo.toml  INSTALL.md  README.md
examples/lister_example/: conf.cesty.toml
examples/lister_example/a/: a.c
ideas/: thoughts.md
scraps/: argument-scrap1.rs  envpool.rs  examp.rs  libclang1.rs  replaceable.rs  tmp1.rs
src/: arg_conf.rs  argument.rs  builder.rs  clang.rs  config.rs  defaults.rs  environment.rs  error.rs  extract.rs  filegroup.rs  globals.rs  init.rs  lister.rs  main.rs  rustclang.rs  translate.rs
src/test/: compilable.rs  extract.rs  mod.rs  old_compilable.rs
thoughts/: thoughts.md
thoughts/examples/: compiler.toml
thoughts/examples/conf/: cesty.toml
