[package]   
name = "cesty"
version = "0.1.0"
edition = "2021"
license = "LPGL V2.1"
license-file = "LICENSE"
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
keywords = ["cesty", "test", "testing", "tool", "cmd"]
# default-run = "./target/debug/cesty"
publish = false
repository = "https://github.com/josko3567/cesty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2"
serde_yaml = "0.9.25"
serde = {version = "1.0.188", features = ["derive"]}
globwalk = "0.8.1"
glob = "0.3.1"
itertools = "0.12.0"
# TODO: Link libclang staticaly for portability.
clang-sys = {version = "1.6.1", features = ["clang_16_0"]}
path-clean = "1.0.1"
colored = "2.0.4"
lazy_static = "1.4"
clang = "2.0"
strum = "0.25"
strum_macros = "0.25.3"
strsim = "0.10.0"
rand = "0.8.4"