[package]
name = "cesty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = { version = "4.5.1", features = ["cargo", "derive"] }
serde        = { version = "1.0", features = ["derive"] }
serde_yaml   = "0.9"
toml         = "0.8.12"
globwalk     = "0.9.1"
ignore       = "0.4.22"
colored      = "2.0.4"
lazy_static  = "1.4.0"
path-clean   = "1.0.1"
strum        = "0.26.2"
strum_macros = "0.26.2"
clang-sys    = {version = "1.7.0", features = ["clang_16_0"]}